# auto-m4b

./: .coverage  .gitignore  Dockerfile  LICENSE  Pipfile  Pipfile.lock.old  Pipfile.old  README.md  auto-m4b.code-workspace  docker-compose.auto-m4b.yml  pyproject.toml
.github/workflows/: ci.yml
scripts/: fix-ffprobe.sh  install-docker-m4b-tool.sh
src/: __init__.py  auto_m4b.py
src/lib/: audiobook.py  books_tree.py  cleaners.py  compare.py  config.py  constants.py  ffmpeg_utils.py  ffprobe_utils.py  formatters.py  fs_utils.py  id3_tags.py  id3_utils.py  inbox_item.py  inbox_state.py  logger.py  m4btool.py  misc.py  nlp.py  ol_lookup.py  parsers.py  patterns.py  run.py  scorers.py  singleton.py  strings.py  term.py  typing.py
src/lib/books_tree/: __init__.py  books_tree.py  books_tree_node.py  books_tree_node_list.py  books_tree_summary.py  books_tree_utils.py
src/lib/converter/: __init__.py  chapters.py  encoder.py  ffmetadata.py  merge.py  naturalsort.py
src/tests/: test__e2e_happy_paths.py  test__e2e_series.py  test__e2e_standalone_and_single.py  test__e2e_unhappy_paths.py  test_audiobook.py  test_books_tree.py  test_compare.py  test_converter.py  test_converter_e2e.py  test_ffmpeg_utils.py  test_fs_utils.py  test_id3_tags.py  test_inbox_state.py  test_launch.py  test_logger.py  test_misc.py  test_parsers.py  test_run_helpers.py  test_term.py  test_tree_node.py
src/tests/fixtures/blackmail_bibingka__flat_m4b/: blackmail, book 3 - 01.m4b  blackmail, book 3 - 02.m4b  blackmail, book 3 - 03.m4b  blackmail, book 3 - 04.m4b  blackmail, book 3 - 05.m4b  blackmail, book 3 - 06.m4b  blackmail, book 3 - 07.m4b
src/tests/fixtures/nathan_lowell__nested_series_m4a/A Seeker's Tale from the Golden Age of the Solar Clipper/01 In Ashes Born/: Seeker's Tales (Solar Clipper Universe) Book 1 - In Ashes Born.m4a  Seeker's Tales (Solar Clipper Universe) Book 1 - In Ashes Born.nfo
src/tests/fixtures/nathan_lowell__nested_series_m4a/A Trader's Tale from the Golden Age of the Solar Clipper/01 Quarter Share/: Trader's Tales (Solar Clipper Universe) Book 1 - Quarter Share.m4a  Trader's Tales (Solar Clipper Universe) Book 1 - Quarter Share.nfo
src/tests/fixtures/nathan_lowell__nested_series_m4a/A Trader's Tale from the Golden Age of the Solar Clipper/02 Half Share/: Trader's Tales (Solar Clipper Universe) Book 2 - Half Share.m4a
src/tests/fixtures/nathan_lowell__nested_series_m4a/A Trader's Tale from the Golden Age of the Solar Clipper/04 Double Share/: Trader's Tales (Solar Clipper Universe) Book 4 - Double Share.m4a  Trader's Tales (Solar Clipper Universe) Book 4 - Double Share.nfo
src/tests/fixtures/nathan_lowell__nested_series_m4a/A Trader's Tale from the Golden Age of the Solar Clipper/05 Captain's Share/: Trader's Tales (Solar Clipper Universe) Book 5 - Captain's Share.nfo
src/tests/fixtures/nathan_lowell__nested_series_m4a/A Trader's Tale from the Golden Age of the Solar Clipper/06 Owner's Share/: Trader's Tales (Solar Clipper Universe) Book 6 - Owner's Share.m4a  Trader's Tales (Solar Clipper Universe) Book 6 - Owner's Share.nfo
src/tests/fixtures/nathan_lowell__nested_series_m4a/Dark Knight Station Origins/: Dark Knight Station Origins.m4a
src/tests/fixtures/nathan_lowell__nested_series_m4a/SC Marva Collins/01 School Days/: SC Marva Collins (Solar Clipper Universe) Book 1 - School Days.nfo
src/tests/fixtures/nathan_lowell__nested_series_m4a/SC Marva Collins/02 Working Class/: Working Class.m4a
src/tests/fixtures/nathan_lowell__nested_series_m4a/Smuggler's Tales from the Golden Age of the Solar Clipper/01 Milk Run Smuggler's Tales, Book 1/: Milk Run Smuggler's Tales, Book 1.cue  Milk Run Smuggler's Tales, Book 1.m4a  Milk Run Smuggler's Tales, Book 1.nfo
src/tests/fixtures/nathan_lowell__nested_series_m4a/Smuggler's Tales from the Golden Age of the Solar Clipper/03 Home Run/: Smuggler's Tales (Solar Clipper Universe) Book 3 - Home Run.m4a  Smuggler's Tales (Solar Clipper Universe) Book 3 - Home Run.nfo
src/tests/fixtures/nathan_lowell__nested_series_m4a/Tanyth Fairport Adventures/: 02 Zypheria's Call.m4a
src/tests/fixtures/nathan_lowell__nested_series_m4a/Tanyth Fairport Adventures/03 The Hermit of Lammas Wood/: The Hermit of Lammas Wood.m4a
src/tests/fixtures/nathan_lowell__nested_series_m4b/A Trader's Tale from the Golden Age of the Solar Clipper/01 Quarter Share/: Trader's Tales (Solar Clipper Universe) Book 1 - Quarter Share.m4a
src/tests/fixtures/nathan_lowell__nested_series_m4b/A Trader's Tale from the Golden Age of the Solar Clipper/02 Half Share/: Trader's Tales (Solar Clipper Universe) Book 2 - Half Share.nfo
src/tests/fixtures/nathan_lowell__nested_series_m4b/A Trader's Tale from the Golden Age of the Solar Clipper/05 Captain's Share/: Trader's Tales (Solar Clipper Universe) Book 5 - Captain's Share.m4a
src/tests/fixtures/nathan_lowell__nested_series_m4b/A Trader's Tale from the Golden Age of the Solar Clipper/06 Owner's Share/: Trader's Tales (Solar Clipper Universe) Book 6 - Owner's Share.m4a
src/tests/fixtures/nathan_lowell__nested_series_m4b/SC Marva Collins/01 School Days/: SC Marva Collins (Solar Clipper Universe) Book 1 - School Days.m4a
src/tests/fixtures/nathan_lowell__nested_series_m4b/Smuggler's Tales from the Golden Age of the Solar Clipper/02 Suicide Run Smuggler's Tales, Book 2/: Suicide Run Smuggler's Tales, Book 2.m4a
src/tests/fixtures/nathan_lowell__nested_series_m4b/Tanyth Fairport Adventures/ 01 Ravenwood/: 00. Nathan Lowell - Ravenwood.nfo  00. Nathan Lowell - Ravenwood.sfv
src/tests/fixtures/nathan_lowell__nested_series_m4b/Wizard's Butler - [Wizard's Butler 01.0] The Wizard's Butler/: Wizard's Butler - [Wizard's Butler 01.0] The Wizard's Butler.m4a
src/tests/fixtures/secret_project_series__nested_flat_mixed/Brandon Sanderson - 2023 - Yumi and the Nightmare Painter/: Brandon Sanderson - Yumi and the Nightmare Painter - 01 of 01.m4b
src/tests/helpers/: pytest_dumps.py  pytest_fixtures.py  pytest_utils.py
