[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
explicit_package_bases = true
ignore_missing_imports = true
check_untyped_defs = true
mypy_path = "src/types:.venv/lib/python3.12/site-packages"
plugins = "numpy.typing.mypy_plugin"

[tool.mypy-applications]
ignore_missing_imports = false

[tool.mypy-common]
ignore_missing_imports = false
check_untyped_defs = true

[tool.black]
target-version = ['py312']
preview = true
line-length = 120

[tool.isort]
profile = "black"
order_by_type = false
combine_as_imports = true
case_sensitive = false
skip_magic_trailing_comma = true
force_sort_within_sections = false

[tool.pyright]
# verboseOutput = true
pythonVersion = "3.12"
extraPaths = [".venv/lib/python3.12/site-packages", "/opt/homebrew/bin"]
reportUnusedImport = "error"
reportUnusedClass = "error"
reportUnusedFunction = "error"
reportUnusedVariable = "error"

[tool.ruff]
target-version = "py312"
line-length = 120
indent-width = 4
preview = true

[tool.ruff.lint]
fixable = ["ALL"]
select = [
    # PRAGMA: F401 is for unused imports, you may want to remove this when developing so you can comment/uncomment code.
    "F401",
    "W292",
    "W293",
    "W191",
    "E101",
    "E112",
    "E117",
    "I002",
    "UP035",
]
# To add, when supported by ruff: "W503", "E203"
# see: https://github.com/astral-sh/ruff/issues/2402

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402", "F401"]

[tool.ruff.lint.isort]
force-sort-within-sections = false
case-sensitive = false
combine-as-imports = true
force-wrap-aliases = true
order-by-type = false

[tool.ruff.format]
indent-style = "space"
line-ending = "auto"
skip-magic-trailing-comma = false
quote-style = "double"

[tool.pytest.ini_options]
minversion = "7.4"
addopts = "-rP -vv -s --color=yes --capture=tee-sys --slow --ignore=.venv"
testpaths = ["src/tests"]
python_files = ["*_test.py", "test_*.py"]
python_classes = ["test_", "_test", "Test*"]
python_functions = ["test_", "_test"]

[tool.poetry]
name = "auto-m4b"
version = "0.1.0"
description = ""
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
inflect = "^7.5.0"
humanize = "^4.12.3"
ffmpeg = "^1.4"
ffmpeg-python = "^0.2.0"
numpy = { version = "<2", platform = "*" }
pydantic = "^2.11.5"
tinta = "0.1.7"
python-dotenv = "^1.1.0"
columnar = "^1.4.1"
# python-ffmpeg = "^1.0.17" # No!
cachetools = "^5.5.2"
types-cachetools = "^5.5.0.20240820"
rapidfuzz = "^3.13.0"
bidict = "^0.23.1"
regex = "^2024.11.6"
mutagen = "^1.47.0"
spacy = { version = "<4", extras = ["apple"], platform = "darwin" }
nltk = "^3.9.1"
lazy = "^1.6"

[tool.poetry.group.dev.dependencies]
ruff = "^0.11.11"
black = "^25.1.0"
mypy = "^1.15.0"
pytest = "^8.3.5"
pytest-asyncio = "^0.26.0"
pillow = "^11.2.1"
pytest-order = "^1.3.0"
pytest-skip-slow = "^0.0.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
app = "src:main"
forever = "src:main"
docker = "src:main"
tests = "pytest:main"
fix-ffprobe = "./scripts/fix-ffprobe.sh"
install-docker-m4b-tool = "./scripts/install-docker-m4b-tool.sh"
start-docker-m4b-tool = "./scripts/start-docker.sh"
